'Updating README.md and fixing contrast'

--- a/assets/css/homepage.css
+++ b/assets/css/homepage.css
@@ -88,6 +88,7 @@ h2 {
 
 #about-left, #about-right, #about-center {
     width: 33%;
+    color: #000000;
 }
 
 
